examples/errors/import_missing.rsp
; Missing import target.
;;! error_at: 5:1
;;! error_contains: not found

(import missing)

(defn main [] -> i32 0)
